add command bar to mitmweb

--- a/web/src/css/app.less
+++ b/web/src/css/app.less
@@ -20,3 +20,4 @@ html {
 @import (less) "contentview.less";
 @import (less) "modal.less";
 @import (less) "dropdown.less";
+@import (less) "command.less";
