transfer the argument suggestion into popup, show available commands, highlight currently typing argument

--- a/web/src/css/command.less
+++ b/web/src/css/command.less
@@ -1,4 +1,4 @@
-.command {
+.command-title {
     background-color: #F2F2F2;
     border: 1px solid #aaa;
 }
@@ -14,4 +14,18 @@
 
 .command-suggestion {
     background-color: #9c9c9c;
+}
+
+.argument-suggestion {
+    background-color: hsla(209, 52%, 84%, 0.5) !important;
+}
+
+.command > .popover {
+    display: block;
+    position: relative;
+    max-width: none;
+}
+
+.available-commands {
+    overflow: auto;
 }
