add documentation about mitmweb

--- a/docs/src/layouts/partials/sidebar.html
+++ b/docs/src/layouts/partials/sidebar.html
@@ -22,4 +22,7 @@
 
     <p class="menu-label"> Tutorials </p>
     {{ partial "sidemenu" (dict "ctx" . "menuname" "tutes") }}
+
+    <p class="menu-label">Mitmweb</p>
+    {{ partial "sidemenu" (dict "ctx" . "menuname" "mitmweb") }}
 </nav>
