force less variable calculation

--- a/web/src/css/header.less
+++ b/web/src/css/header.less
@@ -49,7 +49,7 @@ header {
     }
 
     > .btn.btn-sm {
-        height: (@menu-height - @menu-legend-height)/3;
+        height: ((@menu-height - @menu-legend-height) / 3);
         padding: 0 5px;
         i {
             display: inline-block;
@@ -61,7 +61,7 @@ header {
 
 .menu-entry {
     text-align: left;
-    height: (@menu-height - @menu-legend-height)/3;
+    height: ((@menu-height - @menu-legend-height) / 3);
     line-height: 1;
     padding: 0.5rem 1rem;
 
