web: add support for viewing tcp flows
also:

  - remove quickactions hover menu. these things should be moved into the menu
  - fix flow export

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -184,14 +184,10 @@
             border-radius: 16px;
             text-align: center;
 
-            &:hover, &.open {
+            &:hover {
                 background-color: rgba(0, 0, 0, 5%);
             }
         }
-    }
-
-    .col-quickactions .fa-ellipsis-h {
-        transform: translate(0, 3px);
     }
 
     .col-quickactions .fa-play {
