--- a/web/src/css/sprites.less
+++ b/web/src/css/sprites.less
@@ -48,3 +48,7 @@
 .resource-icon-websocket {
     background-image: url(images/resourceWebSocketIcon.png);
 }
+
+.resource-icon-tcp {
+    background-image: url(images/resourceTcpIcon.png);
+}
