[mitmweb] Fix hide response type menu

--- a/web/src/css/flowdetail.less
+++ b/web/src/css/flowdetail.less
@@ -14,6 +14,8 @@
         padding: 5px 12px 10px;
 
         > footer {
+            position: absolute;
+            bottom: 0;
             box-shadow: 0 0 3px gray;
             padding: 2px;
             margin: 0;
