--- a/docs/scripts/pdoc-template/module.html.jinja2
+++ b/docs/scripts/pdoc-template/module.html.jinja2
@@ -55,6 +55,14 @@ To document all event hooks, we do a bit of hackery:
             {% if doc.qualname.startswith("ServerConnectionHookData") and doc.name != "__init__" %}
                 {{ default_is_public(doc) }}
             {% endif %}
+        {% elif doc.modulename == "mitmproxy.proxy.context" %}
+            {% if doc.qualname is not in(["Context.__init__", "Context.fork", "Context.options"]) %}
+                {{ default_is_public(doc) }}
+            {% endif %}
+        {% elif doc.modulename == "mitmproxy.tls" %}
+            {% if doc.qualname is not in(["TlsData.__init__", "ClientHelloData.__init__"]) %}
+                {{ default_is_public(doc) }}
+            {% endif %}
         {% elif doc.modulename == "mitmproxy.websocket" %}
             {% if doc.qualname != "WebSocketMessage.type" %}
                 {{ default_is_public(doc) }}
