web: minor fixes

--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -64,6 +64,9 @@
         &.selected {
             background-color: #e0ebf5 !important;
         }
+        &.selected.highlighted {
+            background-color: #7bbefc !important;
+        }
 
         &.highlighted {
             background-color: #ffeb99;
