--- a/web/src/css/flowtable.less
+++ b/web/src/css/flowtable.less
@@ -152,10 +152,10 @@
     }
 
     .col-timestamp {
-        width: auto;
+        width: 170px;
     }
 
-    td.col-time, td.col-size {
+    td.col-time, td.col-size, td.col-timestamp {
         text-align: right;
     }
 
