Update certificate intructions for iOS 15

--- a/mitmproxy/addons/onboardingapp/templates/index.html
+++ b/mitmproxy/addons/onboardingapp/templates/index.html
@@ -68,8 +68,7 @@
     <h5>iOS 13+</h5>
     <ol>
         <li>Use Safari to download the certificate. Other browsers may not open the proper installation prompt.</li>
-        <li>Install the new Profile and activate it (<samp>Settings -> General</samp> ->
-            <samp>Profile</samp>).
+        <li>Install the new Profile (<samp>Settings -> General -> VPN & Device Management</samp>).
         </li>
         <li><span class="text-danger"><strong>Important: </strong> Goto
             <samp>Settings -> General -> About -> Certificate Trust Settings</samp>.
