[udp] add layer and flow

--- a/web/src/css/sprites.less
+++ b/web/src/css/sprites.less
@@ -53,6 +53,10 @@
     background-image: url(images/resourceTcpIcon.png);
 }
 
+.resource-icon-udp {
+    background-image: url(images/resourceUdpIcon.png);
+}
+
 .resource-icon-dns {
     background-image: url(images/resourceDnsIcon.png);
 }
