Added magisk module generation

--- a/mitmproxy/addons/onboardingapp/templates/index.html
+++ b/mitmproxy/addons/onboardingapp/templates/index.html
@@ -93,6 +93,9 @@
             patch most apps manually
             (<a href="https://developer.android.com/training/articles/security-config">Android network security config</a>).
         </p>
+        <p>
+          Alternatively, if you have rooted the device and have Magisk installed, you can install <a href="/cert/magisk">this Magisk module</a> via the Magisk Manager app.
+        </p>
     </div>
     {% endcall %}
     {% call entry('Firefox <small>(does not use the OS root certificates)</small>', 'firefox-browser') %}
