feat(contentview): add json syntax highlighting

--- a/web/src/css/contentview.less
+++ b/web/src/css/contentview.less
@@ -14,4 +14,16 @@
     .codeeditor{
         margin-bottom: 12px;
     }
+    .json_key{
+        color: green;
+    }
+    .json_string{
+        color: firebrick;
+    }
+    .json_number{
+        color: deeppink;
+    }
+    .json_boolean{
+        color: blue;
+    }
 }
