feat(contentview): add msgpack syntax highlighting

--- a/web/src/css/contentview.less
+++ b/web/src/css/contentview.less
@@ -15,15 +15,27 @@
         margin-bottom: 12px;
     }
     .json_key{
-        color: green;
+        color: darkgreen;
     }
     .json_string{
         color: firebrick;
     }
     .json_number{
-        color: deeppink;
+        color: purple;
     }
     .json_boolean{
+        color: blue;
+    }
+    .msgpack_key{
+        color: darkgreen;
+    }
+    .msgpack_string{
+        color: firebrick;
+    }
+    .msgpack_number{
+        color: purple;
+    }
+    .msgpack_boolean{
         color: blue;
     }
 }
