UI - added dark mode

--- a/web/src/css/contentview.less
+++ b/web/src/css/contentview.less
@@ -6,7 +6,7 @@
         font-weight: bold;
     }
     .offset{
-        color: blue
+        color: @blue
     }
     .text{
 
@@ -14,4 +14,10 @@
     .codeeditor{
         margin-bottom: 12px;
     }
+}
+
+pre {
+    color: @code-source-text;
+    background-color: @code-source-bg;
+    border: 1px solid @basic-grey;
 }
