--- a/web/src/css/dropdown.less
+++ b/web/src/css/dropdown.less
@@ -2,8 +2,10 @@
 
     // setting a margin is not compatible with popper.
     margin: 0 !important;
+    background: @main-bg;
 
     > li > a {
         padding: 3px 10px;
+        color: @text-main;
     }
 }
