--- a/web/src/css/modal.less
+++ b/web/src/css/modal.less
@@ -11,3 +11,11 @@
     max-height: calc(100vh - 200px);
     overflow-y: auto;
 }
+
+h4, .h4, h5, .h5, h6, .h6 {
+    color: @text-body;
+}
+
+.modal-content {
+    background: @main-bg;
+}
