--- a/web/src/css/app.less
+++ b/web/src/css/app.less
@@ -7,6 +7,7 @@ html {
     box-sizing: inherit;
 }
 
+@import (less) "colors.less";
 @import (less) "sprites.less";
 @import (less) "layout.less";
 @import (less) "tabs.less";
@@ -22,3 +23,4 @@ html {
 @import (less) "dropdown.less";
 @import (less) "command.less";
 @import (less) "capture-setup.less";
+@import (less) "forms.less";
