--- a/web/src/css/command.less
+++ b/web/src/css/command.less
@@ -1,23 +1,23 @@
 .command-title {
-    background-color: #F2F2F2;
-    border: 1px solid #aaa;
+    background-color: @main-bg;
+    border: 1px solid @border-color;
 }
 
 .command-result {
     display: block;
     margin: 0px;
-    background-color: #fcfcfc;
+    background-color: @lite-grey;
     height: 100px;
     max-height: 100px;
     overflow: auto;
 }
 
 .command-suggestion {
-    background-color: #9c9c9c;
+    background-color: @grey-1;
 }
 
 .argument-suggestion {
-    background-color: hsla(209, 52%, 84%, 0.5) !important;
+    background: @item-selected-highlited;
 }
 
 .command > .popover {
