--- a/web/src/css/footer.less
+++ b/web/src/css/footer.less
@@ -1,7 +1,7 @@
 footer {
     box-shadow: 0 -1px 3px lightgray;
     padding: 0 0 4px 3px;
-
+    background-color: @main-bg;
     .label {
         margin-right: 3px;
     }
