feat(contentview): switch to pygment-like token names

--- a/web/src/css/contentview.less
+++ b/web/src/css/contentview.less
@@ -14,28 +14,16 @@
     .codeeditor{
         margin-bottom: 12px;
     }
-    .json_key{
+    .Token_Name_Tag{
         color: darkgreen;
     }
-    .json_string{
+    .Token_Literal_String{
         color: firebrick;
     }
-    .json_number{
+    .Token_Literal_Number{
         color: purple;
     }
-    .json_boolean{
-        color: blue;
-    }
-    .msgpack_key{
-        color: darkgreen;
-    }
-    .msgpack_string{
-        color: firebrick;
-    }
-    .msgpack_number{
-        color: purple;
-    }
-    .msgpack_boolean{
+    .Token_Keyword_Constant{
         color: blue;
     }
 }
