Add content view syntax highlighting for JSON and msgpack (#5648)
* feat(contentview): add json syntax highlighting

* feat(contentview): add msgpack syntax highlighting

* fix(contentview): address pipeline failures

* feat(contentview): switch to pygment-like token names

* feat(mitmproxy): update cli syntax highlighting

* refactor: respond to review comments

* nits

Co-authored-by: Maximilian Hils <git@maximilianhils.com>
Co-authored-by: Maximilian Hils <github@maximilianhils.com>

--- a/web/src/css/contentview.less
+++ b/web/src/css/contentview.less
@@ -14,4 +14,16 @@
     .codeeditor{
         margin-bottom: 12px;
     }
+    .Token_Name_Tag{
+        color: darkgreen;
+    }
+    .Token_Literal_String{
+        color: firebrick;
+    }
+    .Token_Literal_Number{
+        color: purple;
+    }
+    .Token_Keyword_Constant{
+        color: blue;
+    }
 }
