display quic as such in the ui

--- a/web/src/css/sprites.less
+++ b/web/src/css/sprites.less
@@ -60,3 +60,7 @@
 .resource-icon-dns {
     background-image: url(images/resourceDnsIcon.png);
 }
+
+.resource-icon-quic {
+    background-image: url(images/resourceQuicIcon.png);
+}
